--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,9 @@ bundle_app:
   stage: build
   script:
     - npm run build
+  artifacts:
+  paths:
+    - build/  
 
 e2etest:    
     stage: test
