--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 # Node docker image with Cypress and Chrome pre-installed
+# Node docker image with Cypress and Chrome pre-installed
 image: cypress/browsers:node12.0.0-chrome73
 
 # Pipeline
@@ -18,12 +19,12 @@ install_dependencies:
       - node_modules/
 
 bundle_app:
-stage: build
-script:
-  - npm run build
-artifacts:
-  paths:
-    - build/  
+  stage: build
+  script:
+    - npm run build
+  artifacts:
+    paths:
+    - build/
 
 e2etest:    
   stage: test
