--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-# Node docker image with Cypress and Chrome pre-installed
+
 # Node docker image with Cypress and Chrome pre-installed
 image: cypress/browsers:node12.0.0-chrome73
 
@@ -8,12 +8,27 @@ stages:
   - build
   - test
 
+# NEW
+variables:
+   npm_config_cache: "$CI_PROJECT_DIR/.npm"
+   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+
+cache:
+   key:
+     files:
+        - package.json
+   paths:
+      - .npm
+      - cache/Cypress
+      - node_modules
+# END NEW  
+
 # Jobs 
 
 install_dependencies:
   stage: install
   script:
-    - npm ci
+    - npm ci --cache .npm --prefer-offline
   artifacts:
     paths:
       - node_modules/
