--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,3 +46,10 @@ e2etest:
   script:
     - echo "Run tests in headless mode"
     - npm run start:ci
+
+build_jobX:
+  stage: build
+  only:
+    - develop
+  script:
+    - echo "build job X on demoBranch works"    
