--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.4.9",
     "cypress": "^8.7.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "start-server-and-test": "^1.14.0"
   }
 }
