--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "cypress": "^8.7.0",
     "eslint-plugin-cypress": "^2.12.1",
     "start-server-and-test": "^1.14.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
